# mellstroy.game

./: CMakeLists.txt  Makefile  README.md  compile.sh  highscores.txt  тз_mellstroy.game.docx
src/: game.cpp  game.h  main.cpp  menu.cpp
